# mleng_c5

./: .dockerignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  routes.py  schemas.py
app/model/: drift_monitor.py
data/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx
models/: metrics.json  model_config.json  predictor.joblib  reference_profile.json
src/: evaluate.py  feature_engineering.py  preprocessing.py  train.py  utils.py
tests/: test_api.py  test_evaluate.py  test_feature_engineering.py  test_preprocessing.py  test_train.py  test_utils.py
