[project]
name = "mleng-c5"
version = "0.1.0"
description = "Datathon Passos Mágicos - pipeline ML com API e monitoramento"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
